crates/mabo-compiler/tests/snapshots/compiler__error_validate@struct_gen_unused.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "struct Sample<T> {\n    value: String @1,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/struct_gen_unused.mabo
---
  × invalid generic type found
  ├─▶ unused generic type argument found
  ╰─▶ unused generic type argument `T`
   ╭─[struct_gen_unused.mabo:1:15]
 1 │ struct Sample<T> {
   ·               ┬
   ·               ╰── declared here
 2 │     value: String @1,
 3 │ }
   ╰────
  help: each declared generic must be used in some way

