crates/mabo-compiler/tests/snapshots/compiler__error_validate@struct_named_dup_id.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "struct Sample {\n    field1: String @1,\n    field2: String @1,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/struct_named_dup_id.mabo
---
  × duplicate ID found
  ├─▶ duplicate ID in a field
  ╰─▶ duplicate ID 1 in field `field2`, already used in `field1`
   ╭─[struct_named_dup_id.mabo:2:20]
 1 │ struct Sample {
 2 │     field1: String @1,
   ·                    ─┬
   ·                     ╰── first declared here
 3 │     field2: String @1,
   ·                    ─┬
   ·                     ╰── used here again
 4 │ }
   ╰────
  help: the IDs for each field must be unique

