crates/mabo-compiler/tests/snapshots/compiler__error_validate@struct_named_dup_name.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "struct Sample {\n    field: String @1,\n    field: String @2,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/struct_named_dup_name.mabo
---
  × duplicate name found
  ├─▶ duplicate name in a field
  ╰─▶ duplicate field name `field`
   ╭─[struct_named_dup_name.mabo:2:5]
 1 │ struct Sample {
 2 │     field: String @1,
   ·     ──┬──
   ·       ╰── first declared here
 3 │     field: String @2,
   ·     ──┬──
   ·       ╰── used here again
 4 │ }
   ╰────
  help: the names of each field must be unique

