crates/mabo-compiler/tests/snapshots/compiler__error_validate@struct_named_tuple_single.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "struct Sample {\n    field: (u8) @1,\n}"
input_file: crates/mabo-compiler/tests/inputs/validate/struct_named_tuple_single.mabo
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭a single element❬W❭ are invalid
   ╭─[struct_named_tuple_single.mabo:2:12]
 1 │ struct Sample {
 2 │     field: (u8) @1,
   ·            ──┬─
   ·              ╰── declared here
 3 │ }
   ╰────
  help: a tuple must have between 2 and 12 elements

