crates/mabo-compiler/tests/snapshots/compiler__error_validate@struct_unnamed_tuple_single.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: struct Sample((u8) @1)
input_file: crates/mabo-compiler/tests/inputs/validate/struct_unnamed_tuple_single.mabo
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭a single element❬W❭ are invalid
   ╭─[struct_unnamed_tuple_single.mabo:1:15]
 1 │ struct Sample((u8) @1)
   ·               ──┬─
   ·                 ╰── declared here
   ╰────
  help: a tuple must have between 2 and 12 elements
